compilador/Test/Cases/should-fail/test_propios_Err_Type_6.pcf
let tst : Nat = succ + pred